--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter_dotenv: ^2.1.0
   dio: ^3.0.10
   flutter_rating_bar: ^3.2.0+1
+  provider: ^4.3.2+2
 
 dev_dependencies:
   flutter_test:
